<resources>


    <string name="app_name">My Expenses</string>

    <!-- MyPermission Activity -->
    <string name="str_i_respect_your_choice">I respect your choice!</string>
    <string name="str_read_sms">App requires permission to read text messages</string>



    <!-- Main Activity -->
    <string name="str_report_on">Report on </string>
    <string name="str_current_account_balance">"Account balance "</string>
    <string name="str_up_to_the_payday">Days to payday </string>
    <string name="str_average_budget_per_day">Average daily budget </string>
    <string name="str_you_have_spent">You have spent:</string>
    <string name="str_during_the_last_7_days_ie">during the last 7 days, i.e.</string>
    <string name="str_on_average">on average.</string>
    <string name="str_account_balance">account balance</string>




    <!-- Start Activity -->
    <string name="str_i_get_text_messages">I get text messages with the account balance</string>
    <string name="str_i_dont_get_text_messages">I don\'t get text messages with the account balance.</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="str_bank_related_manual_settings">Bank-releted manual settings</string>
    <string name="str_bank_name_preference">Bank name</string>
    <string name="str_from_debt_to_savings">from debt to savings</string>
    <string name="str_the_name_of_bank_in_your_messages">The name of bank in your messages.</string>
    <string name="str_the_name_of_bank">The name of bank</string>
    <string name="str_the_payday">The payday</string>
    <string name="str_chose_the_bank_from_list">Chose the bank from list</string>
    <string name="str_your_payday_day_of_the_month">Your payday (day of the month).</string>
    <string name="str_start_app">Start App</string>
    <string name="str_daily_budget">daily budget</string>
    <string name="str_days_to_payday">days to payday</string>

    <string name="str_resources_and_costs">Resources and Costs</string>
    <string name="str_resources_description">Your additional financial resources</string>
    <string name="str_resources">Resources</string>


    <string name="str_costs_description">Your costs</string>
    <string name="str_costs">Costs</string>
    <string name="str_last_penny">last penny</string>
    <string name="str_last_update">last update</string>


</resources>
